Fix request z-indexing, stop hardware response flow when request canceled

--- a/app/App/Panel/Main/Signer/style/index.styl
+++ b/app/App/Panel/Main/Signer/style/index.styl
@@ -221,14 +221,12 @@
         .signerImage
           position absolute
           top 14px
-          left 0
+          left 50%
           right 0
-          display flex
-          justify-content center
-          align-items center
+          width 24px
+          margin-left -12px
           opacity 1
           transition standardSlow
-          // padding-right 6px
 
           img
             height 28px
